[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-enrichr"
version = "0.1.0"
description = "Enrich a leads CSV with firmographics, tech stack, and contact validation from pluggable providers, caching results to avoid duplicate API spend."
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "bizdev", "enrichr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/enrichr"

[project.scripts]
enrichr = "enrichr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["enrichr"]
